--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,10 @@
 name: CI
+
 on:
   push:
     branches: [ feature/regex-analysis-only ]
   pull_request:
-    branches: [ feature/regex-analysis-only ]
-
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-      - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt -r requirements-dev.txt
-      - name: Run tests
-        run: |
-          python -m pytest -q
-name: CI
-
-on:
-  pull_request:
-    branches: [ main ]
+    branches: [ main, master, feature/regex-analysis-only ]
 
 jobs:
   lint:
@@ -35,12 +15,15 @@ jobs:
         with:
           python-version: '3.11'
       - name: Install ruff
-        run: pip install ruff>=0.5
+        run: pip install "ruff>=0.5"
       - name: Lint
         run: ruff check .
 
-  test:
+  test-regex:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: Regex
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -49,7 +32,6 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-      - name: Run tests
+          pip install -r requirements.txt -r requirements-dev.txt
+      - name: Run tests (Regex)
         run: pytest -q
