ci: scope lint/tests to Regex; set PYTHONPATH; deprecate legacy python-tests workflow; docs: tidy READMEs and add ruff config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,16 @@ name: CI
 
 on:
   push:
-    branches: [ feature/regex-analysis-only ]
+  branches: [ feature/regex-analysis-only ]
   pull_request:
     branches: [ main, master, feature/regex-analysis-only ]
 
 jobs:
   lint:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: Regex
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -34,4 +37,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt -r requirements-dev.txt
       - name: Run tests (Regex)
+        env:
+          PYTHONPATH: ${{ github.workspace }}/Regex/src
         run: pytest -q
